# tools-provider

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  mkdocs.yml  package-lock.json  pyproject.toml  pyrightconfig.json  pytest.ini  skill-bp-aci.txt  tools-provider.code-workspace
src/agent-host/: Dockerfile  Makefile  README.md  TODO.md  main.py  pyproject.toml  pyrightconfig.json
src/agent-host/.github/agents/: websocket-protocol-implementer.agent.md
src/agent-host/api/: __init__.py  dependencies.py  description.md
src/agent-host/api/controllers/: __init__.py  admin_data_controller.py  admin_definitions_controller.py  admin_templates_controller.py  auth_controller.py  chat_controller.py  config_controller.py  definitions_controller.py  files_controller.py  health_controller.py  session_controller.py  settings_controller.py  tools_controller.py  websocket_controller.py
src/agent-host/api/proxy/: __init__.py  api_controller.py
src/agent-host/api/services/: auth_service.py  openapi_config.py
src/agent-host/application/: settings.py
src/agent-host/application/agents/: __init__.py  agent_config.py  agent_factory.py  base_agent.py  client_tools.py  llm_provider.py  proactive_agent.py  react_agent.py
src/agent-host/application/commands/: __init__.py  command_handler_base.py  complete_message_command.py  create_conversation_command.py  create_definition_command.py  create_session_command.py  create_template_command.py  delete_conversation_command.py  delete_conversations_command.py  delete_definition_command.py  delete_template_command.py  send_message_command.py  set_pending_action_command.py  submit_client_response_command.py  terminate_session_command.py  update_definition_command.py  update_template_command.py
src/agent-host/application/events/: __init__.py
src/agent-host/application/mapping/: __init__.py  profile.py
src/agent-host/application/orchestrator/: __init__.py  context.py  orchestrator.py
src/agent-host/application/protocol/: __init__.py  audit.py  canvas.py  control.py  core.py  data.py  enums.py  iframe.py  system.py
src/agent-host/application/queries/: __init__.py  get_conversation_query.py  get_conversations_query.py  get_definitions_query.py  get_session_query.py  get_session_state_query.py  get_templates_query.py  get_user_sessions_query.py
src/agent-host/application/services/: __init__.py  agent_service.py  blueprint_store.py  chat_service.py  evaluation_session_manager.py  item_generator_service.py  logger.py  tool_provider_client.py  websocket_protocol.py
src/agent-host/application/websocket/: __init__.py  connection.py  manager.py  orchestrator.py  router.py  state.py
src/agent-host/data/agents/: default-chat.yaml  proactive-validator.yaml  widget-test-2d.yaml  widget-test.yaml
src/agent-host/data/templates/: math-assessment.yaml  user-onboarding.yaml  widget-showcase-1d.yaml  widget-showcase-2d.yaml
src/agent-host/docs/: ORCHESTRATOR_REFACTORING.md  possible_future_enhancements.md  widget-developer-guide.md
src/agent-host/domain/: __init__.py  exceptions.py
src/agent-host/domain/entities/: __init__.py  agent_definition.py  conversation.py  conversation_template.py  session.py
src/agent-host/domain/enums/: __init__.py  agent_status.py  assignment_role.py  conversation_status.py  session_status.py  share_role.py
src/agent-host/domain/events/: __init__.py  agent_definition.py  conversation.py  conversation_template.py  session.py  user.py
src/agent-host/domain/models/: __init__.py  agent_assignment.py  agent_definition.py  blueprint_models.py  client_action.py  client_response.py  conversation_item.py  conversation_template.py  execution_state.py  generated_item.py  item_content.py  message.py  session_models.py  skill_template.py  tool.py
src/agent-host/domain/repositories/: __init__.py  conversation_dto_repository.py  conversation_repository.py  definition_repository.py  session_repository.py  template_repository.py
src/agent-host/infrastructure/: __init__.py  app_settings_initializer.py  app_settings_service.py  database_resetter.py  database_seeder.py  definition_store_initializer.py  llm_provider_factory.py  openai_token_cache.py  rate_limiter.py  session_store.py  skill_loader.py  yaml_exporter.py
src/agent-host/infrastructure/adapters/: __init__.py  ollama_adapter.py  ollama_llm_provider.py  openai_llm_provider.py
src/agent-host/infrastructure/data/: sample_questions.json
src/agent-host/infrastructure/repositories/: __init__.py  in_memory_conversation_repository.py
src/agent-host/infrastructure/services/: question_bank_service.py
src/agent-host/integration/: __init__.py
src/agent-host/integration/models/: __init__.py  app_settings_dto.py  conversation_dto.py  definition_dto.py  session_dto.py  template_dto.py
src/agent-host/integration/repositories/: __init__.py  motor_agent_definition_dto_repository.py  motor_agent_definition_repository.py  (+7 more)
src/agent-host/observability/: __init__.py  metrics.py
src/agent-host/scripts/: setup_demo.py
src/agent-host/tests/: __init__.py  test_message_content_update.py
src/agent-host/ui/: build-template.js  package-lock.json  package.json  vitest.config.js
src/knowledge-manager/: .dockerignore  Dockerfile  Makefile  __init__.py  main.py  pyproject.toml  pyrightconfig.json  pytest.ini
src/knowledge-manager/api/: __init__.py  dependencies.py  description.md
src/knowledge-manager/application/: __init__.py  settings.py
src/knowledge-manager/domain/: __init__.py
src/knowledge-manager/infrastructure/: __init__.py  session_store.py
src/knowledge-manager/integration/: __init__.py
src/knowledge-manager/observability/: __init__.py  metrics.py
src/knowledge-manager/tests/: __init__.py  conftest.py
src/knowledge-manager/ui/: __init__.py  build-template.js  package-lock.json  package.json  vitest.config.js
src/upstream-sample/: Dockerfile  pyproject.toml
src/upstream-sample/app/: __init__.py  database.py  main.py
(+1254 files in other folders)
