[tool.poetry]
name = "tools-provider"
version = "0.1.0"
description = "MCP Tools Provider - A microservice for discovering, normalizing, curating and securing access to MCP tools mapping to existing upstream OpenAPI services."
authors = ["Bruno van de Werve <bvandewe@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
neuroglia-python = { version = "^0.7.5", extras = ["mongodb", "eventstore"] }
redis = "^7.1.0"
python-keycloak = "^4.0.0"
jinja2 = "^3.1.0"
jsonschema = "^4.25.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
black = ">=23.0.0"
ruff = ">=0.1.0"
mypy = "^1.11.0"
pytest-cov = "^5.0.0"
pre-commit = "^4.3.0"
detect-secrets = "^1.5.0"
pytest-asyncio = "^1.3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
mkdocs-mermaid2-plugin = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 200
select = ["E", "F", "W", "I", "UP"]

[tool.black]
line-length = 200

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "build", "dist"]
skips = ["B101"]  # Skip assert_used check (assert is expected in tests)
