[tool.poetry]
name = "knowledge-manager"
version = "0.1.0"
description = "Knowledge Manager - Multi-dimensional context awareness service for AI agents (Temporal, Semantic, Intentional, Observational aspects)"
authors = ["Bruno van de Werve <bvandewe@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
neuroglia-python = { version = "^0.7.8", extras = ["mongodb", "eventstore"] }
redis = "^7.1.0"
python-keycloak = "^4.0.0"
jinja2 = "^3.1.0"
jsonschema = "^4.25.1"
httpx = "^0.27.0"
multipledispatch = "^1.0.0"
pyyaml = "^6.0.1"
python-jose = "^3.5.0"

# Graph & Vector dependencies (Phase 2-3)
neo4j = "^5.0"
qdrant-client = "^1.7"

# Embeddings (Phase 3) - Uncomment when needed, requires proper torch installation
# sentence-transformers = "^2.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
black = ">=23.0.0"
ruff = ">=0.1.0"
mypy = "^1.11.0"
pytest-cov = "^5.0.0"
pre-commit = "^4.3.0"
detect-secrets = "^1.5.0"
pytest-asyncio = "^1.3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
mkdocs-mermaid2-plugin = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 200
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true
known-first-party = ["domain", "application", "api", "infrastructure", "integration", "ui", "tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "build", "dist"]
skips = ["B101"]  # Skip assert_used check (assert is expected in tests)
